# proof-assistant-bot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  proof-assistant-bot.cabal
app/: Main.hs
config/: settings.dhall
scripts/: start.sh  stop.sh  watch.sh
src/Agda/Interaction/: Command.hs  Interpreter.hs  State.hs
src/Agda/Interaction/Command/: EvalIn.hs  EvalTerm.hs  GiveMeta.hs  RefineMeta.hs  Reload.hs  RetryConstraints.hs  ShowConstraints.hs  ShowContext.hs  ShowMetas.hs  ShowScope.hs  TypeIn.hs  TypeOf.hs
src/Agda/Interaction/Command/Internal/: Parser.hs
src/Idris/Interaction/: Command.hs
src/Proof/Assistant/: Agda.hs  Alloy.hs  Arend.hs  Bot.hs  Helpers.hs  Idris.hs  Interpreter.hs  Lean.hs  RefreshFile.hs  Request.hs  ResourceLimit.hs  Response.hs  Rzk.hs  Settings.hs  State.hs  Transport.hs  Version.hs
